testsuite/poke.pkl/funcall-diag-2.pk
/* { dg-do compile } */

fun myprint = (string str1, string str2, string str3) void:
  {
   print (str1);
   print (str2);
   print (str3);
  }

fun blah = void:
  {
    myprint :str1 "foo" :str2 "bar" :str1 "baz"; /* { dg-error "" } */
  }
